// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cancellation route journey behaves as expected adds the cancellation route journey if SHOW_CANCELLATION_JOURNEY is set to true 1`] = `
Object {
  "default": Array [
    Object {
      "handler": [Function],
      "method": Array [
        "POST",
      ],
      "options": Object {
        "auth": false,
        "plugins": Object {
          "crumb": false,
        },
      },
      "path": "/oidc/signin",
    },
    Object {
      "handler": [Function],
      "method": Array [
        "GET",
      ],
      "options": Object {
        "auth": false,
      },
      "path": "/oidc/account-disabled",
    },
    Object {
      "handler": [Function],
      "method": Array [
        "GET",
      ],
      "options": Object {
        "auth": false,
      },
      "path": "/oidc/role-required",
    },
    Object {
      "handler": [Function],
      "method": "GET",
      "path": "/buy/cancel-recurring-payment/identify",
    },
    Object {
      "handler": [Function],
      "method": "POST",
      "options": Object {
        "validate": Object {
          "failAction": [Function],
          "payload": [Function],
        },
      },
      "path": "/buy/cancel-recurring-payment/identify",
    },
    Object {
      "handler": [Function],
      "method": "GET",
      "path": "/buy/cancel-recurring-payment/details",
    },
    Object {
      "handler": [Function],
      "method": "POST",
      "options": Object {
        "validate": Object {
          "failAction": [Function],
          "payload": [Function],
        },
      },
      "path": "/buy/cancel-recurring-payment/details",
    },
    Object {
      "handler": [Function],
      "method": "GET",
      "path": "/buy/cancel-recurring-payment/confirm",
    },
    Object {
      "handler": [Function],
      "method": "POST",
      "options": Object {
        "validate": Object {
          "failAction": [Function],
          "payload": [Function],
        },
      },
      "path": "/buy/cancel-recurring-payment/confirm",
    },
    Object {
      "handler": [Function],
      "method": "GET",
      "path": "/buy/cancel-recurring-payment/complete",
    },
    Object {
      "handler": [Function],
      "method": "POST",
      "options": Object {
        "validate": Object {
          "failAction": [Function],
          "payload": [Function],
        },
      },
      "path": "/buy/cancel-recurring-payment/complete",
    },
  ],
}
`;

exports[`cancellation route journey behaves as expected omits the cancellation route journey if SHOW_CANCELLATION_JOURNEY is not present 1`] = `
Object {
  "default": Array [
    Object {
      "handler": [Function],
      "method": Array [
        "POST",
      ],
      "options": Object {
        "auth": false,
        "plugins": Object {
          "crumb": false,
        },
      },
      "path": "/oidc/signin",
    },
    Object {
      "handler": [Function],
      "method": Array [
        "GET",
      ],
      "options": Object {
        "auth": false,
      },
      "path": "/oidc/account-disabled",
    },
    Object {
      "handler": [Function],
      "method": Array [
        "GET",
      ],
      "options": Object {
        "auth": false,
      },
      "path": "/oidc/role-required",
    },
  ],
}
`;

exports[`cancellation route journey behaves as expected omits the cancellation route journey if SHOW_CANCELLATION_JOURNEY is set to false 1`] = `
Object {
  "default": Array [
    Object {
      "handler": [Function],
      "method": Array [
        "POST",
      ],
      "options": Object {
        "auth": false,
        "plugins": Object {
          "crumb": false,
        },
      },
      "path": "/oidc/signin",
    },
    Object {
      "handler": [Function],
      "method": Array [
        "GET",
      ],
      "options": Object {
        "auth": false,
      },
      "path": "/oidc/account-disabled",
    },
    Object {
      "handler": [Function],
      "method": Array [
        "GET",
      ],
      "options": Object {
        "auth": false,
      },
      "path": "/oidc/role-required",
    },
  ],
}
`;
